# WorkspaceOS

./: .gitignore  Cargo.toml  README.md  README.txt  RELEASE-GUIDE.md  package.json  pnpm-lock.yaml  rustfmt.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: CopyButton.tsx  Header.tsx  LoadingSpinner.tsx  Sidebar.tsx
apps/desktop/src/components/icons/: WorkspaceLogo.tsx
apps/desktop/src/services/: tauriService.ts
apps/desktop/src/types/: index.ts  material-web.d.ts
apps/desktop/src/views/: AboutView.tsx  DashboardView.tsx  LogsView.tsx  McpView.tsx  SettingsView.tsx  WorkspacesView.tsx
benchmarks/cache_bench/: Cargo.toml
benchmarks/cache_bench/benches/: cache_bench.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: lib.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/index-engine/: Cargo.toml
crates/index-engine/src/: db.rs  indexer.rs  lib.rs  parser.rs
crates/mcp-runtime/: Cargo.toml
crates/mcp-runtime/src/: lib.rs
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: lib.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: fts.rs  lib.rs  search.rs
crates/security-engine/: Cargo.toml
crates/security-engine/src/: lib.rs
crates/tunnel-manager/: Cargo.toml
crates/tunnel-manager/src/: lib.rs
crates/workspace-engine/: Cargo.toml
crates/workspace-engine/src/: config.rs  diagnostics.rs  event_bus.rs  ignore.rs  lib.rs  state.rs  watcher.rs
docs/: IMPLEMENTATION-GUIDE.txt  PROJECT-RULES.txt  UI-DESIGN-SYSTEM.txt  WORKFLOW-GUIDE.md
docs/ADR/: ADR-001-Rust-Core.txt  ADR-002-Tauri.txt  ADR-003-SQLite.txt  ADR-004-Tokio.txt  ADR-005-Axum.txt  ADR-006-MCP-Architecture.txt  ADR-007-Hybrid-Context-Ranking.txt  ADR-008-Capability-Based-Security.txt  ADR-009-Multi-Provider-Tunnel.txt  ADR-010-Plugin-System.txt  ADR-011-Hashing-Strategy.txt  ADR-012-Filesystem-Watcher.txt  ADR-013-Source-Code-Parsing.txt  ADR-014-Hybrid-Search-Architecture.txt
docs/SAD/: 01-Vision.txt  03-Workspace-Engine.txt  04-Security.txt  05-Performance.txt  06-MCP-Tools.txt  07-Context-Engine.txt  08-File-Index.txt  09-Tunnel-System.txt  10-Dashboard.txt  11-Desktop-App.txt  12-Coding-Standards.txt  13-Roadmap.txt  14-Testing.txt  15-Benchmarks.txt
