[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/desktop/src-tauri",
    "benchmarks/*"
]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
axum = { version = "0.7.9", features = ["ws", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
blake3 = "1.5.5"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tree-sitter = "0.22.6"
tantivy = "0.22.0"
moka = { version = "0.12.8", features = ["sync", "future"] }
lru = "0.12.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
