[package]
name = "context-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
workspace-engine = { path = "../workspace-engine" }
index-engine = { path = "../index-engine" }
search-engine = { path = "../search-engine" }
uuid = { version = "1.12.1", features = ["v4"] }
