[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
tantivy = { workspace = true }
workspace-engine = { path = "../workspace-engine" }
index-engine = { path = "../index-engine" }
tokio = { workspace = true }
uuid = { version = "1.12.1", features = ["v4"] }
