[package]
name = "workspace-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = "0.8.23"
uuid = { version = "1.12.1", features = ["v4"] }
parking_lot = "0.12.5"
tokio = { workspace = true }
thiserror = "2.0.11"
